# adeia-api

./: .codecov.yml  .gitignore  .travis.yml  404.html  README.md  error.go  go.mod  go.sum  index.html  mkdocs.yml  pyproject.toml  user.go  user_test.go
api/: openapi.yaml
api-reference/leave-type/: index.html
cmd/adeia/: main.go  main_test.go
docs/api-reference/: user.md
internal/cache/: cache.go
internal/cache/redis/: redis.go  redis_test.go
internal/config/: config.go  loader.go  loader_test.go
internal/http/: handler.go  user.go
internal/http/server/: server.go
internal/repo/: user.go
internal/service/: user.go
internal/store/: store.go
internal/store/pg/: pg.go  pg_test.go
pkg/constants/: constants.go
pkg/errs/: response.go  response_test.go
pkg/http/middleware/: middleware.go  query.go
pkg/http/response/: error.go  error_test.go  response.go
pkg/log/: log.go
pkg/log/zap/: zap.go  zap_test.go
pkg/util/constants/: constants.go
pkg/util/crypto/: crypto.go
pkg/util/httputil/: decode.go  decode_test.go  encoding.go  encoding_test.go  query.go  response.go  response_test.go
pkg/util/ioutil/: ioutil.go  ioutil_test.go
pkg/util/stringutil/: stringutil.go  stringutil_test.go
resources/: create_users_table.sql
search/: search_index.json
web/email_templates/layouts/: base.tmpl
web/email_templates/pages/: email_verify.tmpl
web/email_templates/partials/: footer.tmpl
