[tool.poetry]
name = "adeia"
version = "0.1.0"
description = ""
authors = ["arkn98 <20590666+arkn98@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^5.5.12"
mkdocs-git-revision-date-localized-plugin = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
