[tool.poetry]
name = "adeia"
version = "0.1.0"
description = ""
authors = ["arkn98 <20590666+arkn98@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-git-revision-date-localized-plugin = "^0.7"
mkdocs-material = "^6.0.0"
mkdocs-macros-plugin = "^0.4.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
